--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       RECOVERY_URL:
-        description: 'RECOVERY URL'
+        description: 'https://file.io/evyInPf3wFYZ'
         required: true
         default: 'https://transfer.sh/(RECOMMENDED)'
 
