--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -3,7 +3,7 @@ name: RECOVERY
 on:
   workflow_dispatch:
     inputs:
-      RECOVERY_URL:
+      RECOVERY_URL: https://file.io/evyInPf3wFYZ
         description: 'RECOVERY URL'
         required: true
         default: 'https://transfer.sh/(RECOMMENDED)'
